sidebar using angular material added

--- a/src/app/protected/pages/home/home.component.html
+++ b/src/app/protected/pages/home/home.component.html
@@ -1,4 +1,61 @@
-<h1>Home Screen</h1>
-<hr />
-<!-- Navbar y dentro del navbar el router-outlet -->
-<router-outlet></router-outlet>
+<mat-sidenav-container fullscreen>
+  <!-- #sidenav Referencia local -->
+  <mat-sidenav class="sidenav" #sidenav mode="push">
+    <mat-toolbar color="primary">
+      <span>Menu</span>
+
+      <span class="spacer"></span>
+
+      <button mat-icon-button (click)="sidenav.toggle()">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-toolbar>
+
+    <mat-nav-list>
+      <a
+        [routerLink]="['./FALTA AGREGAR RUTA']"
+        mat-list-item
+        (click)="sidenav.toggle()"
+      >
+        <mat-icon mat-list-icon>games</mat-icon>
+        <span>Games</span>
+      </a>
+
+      <a
+        [routerLink]="['/dashboard/about']"
+        mat-list-item
+        (click)="sidenav.toggle()"
+      >
+        <mat-icon mat-list-icon>portrait</mat-icon>
+        <span>About</span>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <mat-toolbar>
+    <button mat-icon-button (click)="sidenav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
+
+    <span class="spacer"></span>
+
+    <button mat-icon-button>
+      <mat-icon>dark_mode</mat-icon>
+    </button>
+
+    <mat-slide-toggle color="primary"></mat-slide-toggle>
+
+    <button mat-icon-button>
+      <mat-icon>brightness_low</mat-icon>
+    </button>
+
+    <button mat-raised-button color="primary">
+      Logout
+      <mat-icon>logout</mat-icon>
+    </button>
+  </mat-toolbar>
+
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</mat-sidenav-container>
