material divider added

--- a/src/app/protected/pages/home/home.component.html
+++ b/src/app/protected/pages/home/home.component.html
@@ -30,6 +30,8 @@
         <span>Games</span>
       </a>
 
+      <mat-divider></mat-divider>
+
       <a
         [routerLink]="['/dashboard/about']"
         mat-list-item
