--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -10,9 +10,9 @@
     <a [routerLink]="['/auth/register']">Ir a Regístrate</a>
   </li>
   <li>
-    <a [routerLink]="['/dashboard/home']">Ir a Home</a>
+    <a [routerLink]="['/protected/dashboard']">Ir a Dashboard</a>
   </li>
   <li>
-    <a [routerLink]="['/dashboard/about']">Ir a About</a>
+    <a [routerLink]="['/protected/about']">Ir a About</a>
   </li>
 </ul>
