--- a/src/app/auth/pages/login/login.component.css
+++ b/src/app/auth/pages/login/login.component.css
@@ -36,6 +36,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 40px;
+  margin-bottom: -6px;
 }
 
 .button_social_media {
