--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -25,7 +25,7 @@
   >
     <div fxLayout="column" fxLayoutAlign="center center" fxFlex="20">
       <form class="form-login" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-        <h1>Iniciar sesión en sala de juegos</h1>
+        <h1>Iniciar sesión</h1>
         <mat-form-field appearance="fill">
           <mat-label class="label_email">Ingresa tu email</mat-label>
           <input
