--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -85,12 +85,7 @@
         style="display: flex"
       >
         <div fxLayout="row" fxLayoutAlign="space-around center">
-          <img
-            class="image_social_media"
-            [src]="icon.src"
-            [alt]="icon.alt"
-            width="25"
-          />
+          <img class="image_social_media" [src]="icon.src" [alt]="icon.alt" />
           <span class="text_social_media">Continuar con {{ icon.name }}</span>
         </div>
       </button>
