--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -45,18 +45,18 @@
           }}</mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" formGroupName="passwords">
           <mat-label class="label_password">Ingresa tu password</mat-label>
           <input
-            formControlName="passwordOne"
+            formControlName="password"
             class="input_password"
             matInput
             [type]="hide ? 'password' : 'text'"
             required
           />
-          <mat-error *ngIf="passwordOne.invalid">{{
-            getErrorMessagePassword()
-          }}</mat-error>
+          <mat-error *ngIf="password.errors"
+            >{{ getErrorMessagePassword() }}
+          </mat-error>
 
           <button
             type="button"
@@ -68,15 +68,19 @@
           </button>
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" formGroupName="passwords">
           <mat-label class="label_password">Reingresa tu password</mat-label>
           <input
-            formControlName="passwordTwo"
+            formControlName="confirmPassword"
             class="input_password"
             matInput
             [type]="hide ? 'password' : 'text'"
             required
           />
+
+          <mat-error *ngIf="confirmPassword.errors"
+            >{{ getErrorMessagePassword() }}
+          </mat-error>
 
           <button
             type="button"
