--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -24,7 +24,11 @@
     fxLayoutAlign="center space-evenly"
   >
     <div fxLayout="column" fxLayoutAlign="center center" fxFlex="20">
-      <form class="form-login" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <form
+        class="form-login"
+        [formGroup]="loginForm"
+        (ngSubmit)="onLoginEmailPassword()"
+      >
         <h1>Iniciar sesión</h1>
         <mat-form-field appearance="fill">
           <mat-label class="label_email">Ingresa tu email</mat-label>
