auth serviced added

--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -27,7 +27,7 @@
       <form
         class="form-register"
         [formGroup]="registerForm"
-        (ngSubmit)="onSubmit()"
+        (ngSubmit)="onRegister()"
       >
         <h1>Regístrate</h1>
         <mat-form-field appearance="fill">
