action of logout added

--- a/src/app/protected/pages/home/home.component.html
+++ b/src/app/protected/pages/home/home.component.html
@@ -60,7 +60,7 @@
       <mat-icon>brightness_low</mat-icon>
     </button>
 
-    <button mat-raised-button color="primary">
+    <button mat-raised-button color="primary" (click)="onLogout()">
       Logout
       <mat-icon>logout</mat-icon>
     </button>
