--- a/src/app/protected/pages/home/home.component.css
+++ b/src/app/protected/pages/home/home.component.css
@@ -5,3 +5,15 @@
 .container {
   margin: 25px;
 }
+
+.detailsUser {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 15px;
+}
+
+.userImage {
+  width: 30px;
+  border-radius: 100%;
+}
