Feature/persist user and protect routes (#15)
* authService and LogUserService providedIn root

* comment the logs of users in login component

* task complete.

* TODO added

* add username

* task completed

--- a/src/app/protected/pages/home/home.component.css
+++ b/src/app/protected/pages/home/home.component.css
@@ -4,4 +4,17 @@
 
 .container {
   margin: 25px;
+  border: 1px solid white;
+}
+
+.detailsUser {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 15px;
+}
+
+.userImage {
+  width: 30px;
+  border-radius: 100%;
 }
