--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -37,7 +37,6 @@
             class="input_email"
             matInput
             placeholder="example@example.com"
-            autocomplete="off"
             required
           />
           <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error>
@@ -51,6 +50,7 @@
             matInput
             [type]="hide ? 'password' : 'text'"
             required
+            autocomplete="on"
           />
 
           <button
@@ -87,10 +87,46 @@
         mat-button
         *ngFor="let icon of listIcons"
         style="display: flex"
+        (click)="icon.onClickFn()"
       >
         <div fxLayout="row" fxLayoutAlign="space-around center">
           <img class="image_social_media" [src]="icon.src" [alt]="icon.alt" />
           <span class="text_social_media">Continuar con {{ icon.name }}</span>
+        </div>
+      </button>
+    </div>
+  </div>
+
+  <!-- Carga rápido de usuario -->
+  <div
+    class="container"
+    fxLayout="row"
+    fxLayout.xs="column"
+    fxLayout.sm="column"
+    fxLayout.md="column"
+    fxLayout.lg="column"
+    fxLayoutAlign="center space-evenly"
+  >
+    <div
+      class="container_social_media"
+      fxLayout="column"
+      fxLayoutAlign="space-around center"
+      fxLayoutGap="10px"
+      fxFlex="20"
+    >
+      <button
+        class="button_social_media"
+        mat-button
+        style="display: flex"
+        (click)="cargaRapida()"
+      >
+        <div fxLayout="row" fxLayoutAlign="center center">
+          <img
+            class="image_social_media"
+            src="../../../../assets/icons/bolt.svg"
+            alt="bolt icon"
+          />
+          <span class="text_social_media">Carga rápida</span>
         </div>
       </button>
     </div>
