--- a/src/app/protected/pages/chat/chat.component.css
+++ b/src/app/protected/pages/chat/chat.component.css
@@ -1,3 +1,47 @@
+.chat-container {
+  height: 60vh;
+  width: 60vw;
+  min-width: 300px;
+}
+
+.container-chat {
+  border: 2px solid #c2185b;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.container-send-message {
+  width: 60vw;
+  min-width: 300px;
+}
+
+.image-chat-user {
+  width: 40px;
+  border-radius: 50px;
+  margin-right: 10px;
+}
+
+.name-chat-user {
+  font-weight: 500;
+}
+
+.message-user {
+  margin-top: 10px;
+}
+
+/*  */
+/*  */
+/* .container-virtual-scroll {
+  height: 600px;
+  width: 265px;
+  max-width: 265px;
+  width: 300px;
+}
+
+.container-users-chat {
+  width: 100%;
+}
+
 .container-data-user {
   display: flex;
   justify-content: flex-end;
@@ -17,9 +61,9 @@
 .message-user {
   margin-top: 10px;
   text-align: right;
-}
+} */
 
-@media screen and (min-width: 320px) {
+/* @media screen and (min-width: 320px) {
   .container-virtual-scroll {
     height: 600px;
     width: 265px;
@@ -84,4 +128,4 @@
   .container-send-message {
     width: 1200px;
   }
-}
+} */
