--- a/src/app/protected/pages/about/about.component.html
+++ b/src/app/protected/pages/about/about.component.html
@@ -65,36 +65,13 @@
       </div>
 
       <div fxFlex="35">
-        <h3 class="text_about">Juego propio</h3>
+        <h3 class="text_about">Juego propio: Snake</h3>
 
         <mat-divider></mat-divider>
         <br />
 
         <div class="content">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
-            deserunt aspernatur vel at voluptatibus alias eveniet error corrupti
-            totam iure facilis est voluptas sed debitis tempore excepturi id
-            nemo ipsam!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
-            deserunt aspernatur vel at voluptatibus alias eveniet error corrupti
-            totam iure facilis est voluptas sed debitis tempore excepturi id
-            nemo ipsam!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
-            deserunt aspernatur vel at voluptatibus alias eveniet error corrupti
-            totam iure facilis est voluptas sed debitis tempore excepturi id
-            nemo ipsam!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
-            deserunt aspernatur vel at voluptatibus alias eveniet error corrupti
-            totam iure facilis est voluptas sed debitis tempore excepturi id
-            nemo ipsam!
-          </p>
+          <p>El juego más clásico, retro y genial de la historia!</p>
         </div>
       </div>
     </div>
