--- a/src/app/protected/pages/about/about.component.html
+++ b/src/app/protected/pages/about/about.component.html
@@ -73,6 +73,13 @@
         <div class="content">
           <p>El juego más clásico, retro y genial de la historia!</p>
         </div>
+
+        <div class="content">
+          <p>
+            El requirimiento indispensable para jugar a este juego es...
+            solamente tener ganas de jugar!
+          </p>
+        </div>
       </div>
     </div>
   </div>
