--- a/src/app/protected/pages/about/about.component.html
+++ b/src/app/protected/pages/about/about.component.html
@@ -65,35 +65,19 @@
       </div>
 
       <div fxFlex="35">
-        <h3 class="text_about">Juego propio</h3>
+        <h3 class="text_about">Juego propio: Snake</h3>
 
         <mat-divider></mat-divider>
         <br />
 
         <div class="content">
+          <p>El juego más clásico, retro y genial de la historia!</p>
+        </div>
+
+        <div class="content">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
-            deserunt aspernatur vel at voluptatibus alias eveniet error corrupti
-            totam iure facilis est voluptas sed debitis tempore excepturi id
-            nemo ipsam!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
-            deserunt aspernatur vel at voluptatibus alias eveniet error corrupti
-            totam iure facilis est voluptas sed debitis tempore excepturi id
-            nemo ipsam!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
-            deserunt aspernatur vel at voluptatibus alias eveniet error corrupti
-            totam iure facilis est voluptas sed debitis tempore excepturi id
-            nemo ipsam!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
-            deserunt aspernatur vel at voluptatibus alias eveniet error corrupti
-            totam iure facilis est voluptas sed debitis tempore excepturi id
-            nemo ipsam!
+            El requirimiento indispensable para jugar a este juego es...
+            solamente tener ganas de jugar!
           </p>
         </div>
       </div>
