--- a/src/app/protected/pages/games/tateti/tateti.component.css
+++ b/src/app/protected/pages/games/tateti/tateti.component.css
@@ -31,3 +31,10 @@
 .radio-button {
   margin: 5px;
 }
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
