--- a/src/app/protected/pages/games/memotest/memotest.component.css
+++ b/src/app/protected/pages/games/memotest/memotest.component.css
@@ -11,3 +11,17 @@
   align-items: center;
   font-size: 30px;
 }
+
+.btn-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
