--- a/src/app/protected/pages/games/piedrapapelotijera/piedrapapelotijera.component.css
+++ b/src/app/protected/pages/games/piedrapapelotijera/piedrapapelotijera.component.css
@@ -55,3 +55,11 @@
 #group-btn > .btn-ppt > .img-ppt {
   width: 100%;
 }
+
+.wrapper {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
