--- a/src/app/protected/pages/games/piedrapapelotijera/piedrapapelotijera.component.html
+++ b/src/app/protected/pages/games/piedrapapelotijera/piedrapapelotijera.component.html
@@ -30,3 +30,12 @@
     </button>
   </div>
 </div>
+
+<div class="wrapper">
+  <mat-label><h1>PUNTAJES</h1></mat-label>
+  <app-spinner [isLoading]="!this.scoresGame"></app-spinner>
+  <app-score-table
+    [scoreList]="this.scoresGame"
+    *ngIf="this.scoresGame"
+  ></app-score-table>
+</div>
